# vamos

./: .gitignore  AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  README.org  TODO  aclocal.m4  configure  configure.ac  flymake.mk  meson.build
body/: Aerodynamic_Device.cc  Aerodynamic_Device.h  Brake.cc  Brake.h  Car.cc  Car.h  Car_Reader.cc  Clutch.cc  Clutch.h  Contact_Point.cc  Contact_Point.h  Dashboard.cc  Dashboard.h  Differential.cc  Differential.h  Documentation.h  Drivetrain.cc  Drivetrain.h  Engine.cc  Engine.h  Frame.cc  Frame.h  Fuel_Tank.cc  Fuel_Tank.h  Gl_Car.cc  Gl_Car.h  Makefile.am  Makefile.in  Particle.cc  Particle.h  Rigid_Body.cc  Rigid_Body.h  Suspension.cc  Suspension.h  Tire.cc  Tire.h  Transmission.cc  Transmission.h  Wheel.cc  Wheel.h  (+44 more)
caelum/: Cylinder_Sky.cc  Cylinder_Sky.h  Makefile.am  Makefile.in  README  Sky.cc  Sky.h  Sphere_Sky.cc  Sphere_Sky.h  caelum.cc  cylinder-sky.cc  cylinder-sky.h  meson.build  sky.cc  sky.h  sphere-sky.cc  sphere-sky.h
config/: Makefile.am  Makefile.in  config.guess  config.sub  ltconfig  ltmain.sh
data/: Makefile.am  Makefile.in
data/cars/: F1-1967-arm.ac  F1-1967-interior.ac  F1-1967-stator.ac  F1-1967-wishbone.ac  F1-1967.ac  F1-1967.xml  F1-black.ac  F1-blue.ac  F1-red.ac  F1-silver.ac  F1-stator.ac  F1-white.ac  F1-wishbone.ac  F1.ac  F1.xml  GT-black.ac  GT-blue.ac  GT-green.ac  GT-interior.ac  GT-red.ac  GT.ac  GT.xml  GTI.mtl  GTI.xml  Makefile.am  Makefile.in  block.ac  block.xml  default-car.xml  front-drive.xml  trainer.xml  wheel-1967.ac  wheel-fast.ac  wheel.ac
data/cars/F1/: 1.xml  2.xml  3.xml  4.xml  5.xml  Makefile.am  Makefile.in
data/cars/GT/: 1.xml  2.xml  3.xml  4.xml  5.xml  Makefile.am  Makefile.in
data/controls/: Makefile.am  Makefile.in  clutch-wheel.xml  keyboard.xml  mouse.xml  stick.xml  throttle-wheel.xml
data/sounds/: Makefile.am  Makefile.in  default-sounds.xml
data/textures/: 1967-steering-wheel.xcf  Makefile.am  Makefile.in  dash.xcf  face.xcf  steering-wheel.xcf
data/tracks/: Albert_Park.xml  Americas.xml  Austria.xml  Bahrain.xml  Catalunya.xml  Curl.xml  D.xml  Fuji.xml  Hockenheimring.xml  Hungaroring.xml  Imola.xml  Indianapolis.xml  Interlagos.xml  Istanbul.xml  Jerez.xml  Korea.xml  Kyalami.xml  Laguna_Seca.xml  Le_Mans.xml  Magny-Cours.xml  Makefile.am  Makefile.in  Monaco.xml  Monza-1967.xml  Monza-Bank.xml  Monza.xml  Mosport.xml  Nurburgring.xml  Peanut.xml  Road_Atlanta.xml  Sepang.xml  Shanghai.xml  Silverstone-2010.xml  Silverstone-2011.xml  Silverstone.xml  Singapore.xml  Spa.xml  Suzuka.xml  Valencia.xml  Villeneuve.xml  (+10 more)
data/worlds/: Makefile.am  Makefile.in  earth.xml  moon.xml  night.xml
doc/: Makefile.am  Makefile.in  collisions.tex  curve.eps  how-to-profile.org  matrixfaq.htm  model.org  overlap.eps  track-coordinates.lisp  vamos.info  vamos.texi
doc/robot-cars/: Makefile.am  Makefile.in  braking-drag.xcf  braking.xcf  computer-controlled-cars.tex  curvature.data  curvature.xcf  demo.xml  track.xcf  v-max-data  v-max.xcf
doc/track-coordinates/: circles.eps  straight.eps  track-coordinates.tex
geometry/: Calculations.cc  Calculations.h  Circular_Buffer.h  Constants.h  Contact_Info.h  Conversions.h  Inertia_Tensor.cc  Inertia_Tensor.h  Interpolator.cc  Interpolator.h  Linear_Interpolator.cc  Linear_Interpolator.h  Makefile.am  Makefile.in  Material.cc  Material.h  Numeric.h  PID.cc  PID.h  Parameter.cc  Parameter.h  Rectangle.cc  Rectangle.h  Spline.cc  Spline.h  Three_Matrix.cc  Three_Matrix.h  Three_Vector.cc  Three_Vector.h  Two_Vector.cc  Two_Vector.h  bp-geometry.cc  calculations.cc  calculations.h  circular-buffer.h  constants.h  contact-info.h  conversions.h  documentation.h  inertia-tensor.cc  (+34 more)
media/: Ac3d.cc  Ac3d.h  Makefile.am  Makefile.in  Sample.cc  Sample.h  Texture_Image.cc  Texture_Image.h  Two_D.cc  Two_D.h  XML_Parser.cc  XML_Parser.h  bp-media.cc  documentation.h  material.cc  material.h  meson.build  model.cc  model.h  sample.cc  sample.h  texture-image.cc  texture-image.h  two-d.cc  two-d.h  xml-parser.cc  xml-parser.h  xml.cc  xml.h
scripts/: Makefile.am  Makefile.in  conversions.el  geometry.py  graph.sh  log.org  magic.el  random_circuit.py  random_road.py  random_track.py  tread.py  trk-convert  vamos_track.py  wheels.gnuplot
test/: doctest.h  meson.build  test.cc  test.h  test_aerodynamics.cc  test_calculations.cc  test_car.cc  test_circular-buffer.cc  test_controls.cc  test_frame.cc  test_linear-interpolator.cc  test_numeric.cc  test_particle.cc  test_pid.cc  test_rectangle.cc  test_rigid-body.cc  test_road-segment.cc  test_spline.cc  test_strip-track.cc  test_three-matrix.cc  test_three-vector.cc  test_timing-info.cc  test_two-vector.cc  test_xml-parser.cc
track/: Documentation.h  Gl_Road_Segment.cc  Gl_Road_Segment.h  Makefile.am  Makefile.in  Road_Segment.cc  Road_Segment.h  Strip_Track.cc  Strip_Track.h  Strip_Track_Reader.cc  Track.h  bp-track.cc  gl-road-segment.cc  gl-road-segment.h  meson.build  road-segment.cc  road-segment.h  strip-track-reader.cc  strip-track.cc  strip-track.h  test_Road_Segment.cc  test_Strip_Track.cc  track.h
vamos/: Makefile.am  Makefile.in  Options.cc  Options.h  bp-body.cc  bp-geometry.cc  bp-media.cc  bp-track.cc  bp-world.cc  config.py.in  meson.build  options.cc  options.h  py.mak  vamos.cc  vamos.in  vamos.py
world/: Atmosphere.cc  Atmosphere.h  Controls.cc  Controls.h  Documentation.h  Driver.h  Gl_World.cc  Gl_World.h  Interactive_Driver.cc  Interactive_Driver.h  Makefile.am  Makefile.in  Robot_Driver.cc  Robot_Driver.h  Sounds.cc  Sounds.h  Timing_Info.cc  Timing_Info.h  World.cc  World.h  atmosphere.cc  atmosphere.h  bp-world.cc  controls.cc  controls.h  driver.h  gl-world.cc  gl-world.h  interactive-driver.cc  interactive-driver.h  meson.build  pid.cc  pid.h  robot-driver.cc  robot-driver.h  sounds.cc  sounds.h  test_Controls.cc  test_Timing_Info.cc  timing-info.cc  (+3 more)
