geometry_sources = [
  'interpolator.cc',
  'linear-interpolator.cc',
  'numeric.cc',
  'parameter.cc',
  'spline.cc',
  'three-matrix.cc',
  'three-vector.cc',
  'two-vector.cc',
]

geometry_lib = library('vamos-geometry',
                        geometry_sources,
                        include_directories: vamos_includes,
                        install: true)
