carsdir = $(pkgdatadir)/cars

cars_DATA = \
	default-car.xml \
	F1-1967.ac \
	F1-1967-interior.ac \
	F1-1967.xml \
	F1-1967-arm.ac \
	F1-1967-stator.ac \
	F1-1967-wishbone.ac \
	F1-stator.ac \
	F1-wishbone.ac \
	F1.ac \
	F1.xml \
	front-drive.xml \
	GT.ac \
	GT-interior.ac \
	GT.xml \
	trainer.xml \
	wheel.ac \
	wheel-fast.ac

EXTRA_DIST = $(cars_DATA)
