texturesdir = $(pkgdatadir)/textures

textures_DATA = \
	100.png \
	100-vertical.png \
	150.png \
	150-vertical.png \
	1967-steering-wheel.png \
	200.png \
	300.png \
	400.png \
	50.png \
	50-vertical.png \
	blue-green-tires.png \
	blue-kerb.png \
	blue-tires.png \
	blue-wall.png \
	concrete.png \
	digits-lcd.png \
	digits.png \
	F1-steering-wheel.png \
	fuel-face.png \
	gear-shift.png \
	gears-lcd.png \
	gears.png \
	grass2.png \
	grass.png \
	gravel.png \
	gravel2.png \
	gravel3.png \
	kerb.png \
	needle.png \
	orange-yellow-kerb.png \
	rail.png \
	red-kerb.png \
	red-tires.png \
	round-mask.png \
	shift-gate.png \
	sky_bottom.png \
	sky.png \
	sky_sides.png \
	sky_top.png \
	speedometer-face.png \
	square-mask.png \
	square-mirror-frame.png \
	steering-wheel.png \
	tachometer-face.png \
	tachometer-leds.png \
	tires.png \
	track.png \
	track2.png \
	wall.png

EXTRA_DIST = $(textures_DATA)
