tracksdir = $(pkgdatadir)/tracks

tracks_DATA = \
	Albert_Park.xml \
	Bahrain.xml \
	bridge.ac \
	Catalunya.xml \
	D.xml \
	default-track.xml \
	drag.xml \
	garage.ac \
	grandstand.ac \
	Hockenheimring.xml \
	Hungaroring.xml \
	Imola.xml \
	Indianapolis.xml \
	Interlagos.xml \
	Istanbul.xml \
	jump.xml \
	Kyalami.xml \
	Laguna_Seca.xml \
	Magny-Cours.xml \
	Monaco.xml \
	Monza.xml \
	Monza-Bank.xml \
	Mosport.xml \
	Nurburgring.xml \
	Peanut.xml \
	Road_Atlanta.xml \
	Sepang.xml \
	Shanghai.xml \
	Silverstone.xml \
	Silverstone-2010.xml \
	Silverstone-2011.xml \
	skid_pad.xml \
	Spa.xml \
	Suzuka.xml \
	Valencia.xml \
	Villeneuve.xml \
	Yas_Marina.xml

EXTRA_DIST = $(tracks_DATA)
