tracksdir = $(pkgdatadir)/tracks

tracks_DATA = \
	Albert_Park.xml \
	Americas.xml \
	Bahrain.xml \
	bridge.ac \
	Catalunya.xml \
	Curl.xml \
	D.xml \
	drag.xml \
	garage.ac \
	grandstand.ac \
	Hockenheimring.xml \
	Hungaroring.xml \
	Imola.xml \
	Indianapolis.xml \
	Interlagos.xml \
	Istanbul.xml \
	Jerez.xml \
	jump.xml \
	Korea.xml \
	Kyalami.xml \
	Laguna_Seca.xml \
	Le_Mans.xml \
	Magny-Cours.xml \
	Monaco.xml \
	Monza.xml \
	Monza-1967.xml \
	Monza-Bank.xml \
	Mosport.xml \
	Nurburgring.xml \
	Peanut.xml \
	Road_Atlanta.xml \
	Sepang.xml \
	Shanghai.xml \
	Silverstone.xml \
	Silverstone-2010.xml \
	Silverstone-2011.xml \
	Singapore.xml \
	skid_pad.xml \
	Spa.xml \
	Suzuka.xml \
	Valencia.xml \
	Villeneuve.xml \
	Watkins_Glen.xml \
	Yas_Marina.xml

EXTRA_DIST = $(tracks_DATA)
